# detection-faux-billets

./: Dockerfile  README.md  main.py  pyproject.toml
api/: streamlit_app.py
data/processed/: X.csv  X_test.csv  X_train.csv  billets_imputed.csv  y.csv  y_test.csv  y_train.csv
model/: pipeline_logit.pkl
notebook/: notebook_analyse.ipynb
results/logit_metrics/: classification_report.json  logit_scores.json
results/metrics/: imputer_metrics.json
src/: load_data.py  preprocessing.py  train_model.py
